--- a/src/app/features/financial-dashboard/components/general-table/filtering-form/filtering-form.component.html
+++ b/src/app/features/financial-dashboard/components/general-table/filtering-form/filtering-form.component.html
@@ -78,7 +78,7 @@
     <div class="filtering-form__search text-end">
       <button
         type="button"
-        class="btn btn-dark me-3"
+        class="btn btn-dark"
         (click)="reset()"
       >
         Reset
