--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-navbar></app-navbar>
+<div id="app">
+  <div class="wrapper">
+    <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+    <main class="page">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+</div>
