--- a/src/app/features/financial-dashboard/components/general-table/filtering-form/filtering-form.component.scss
+++ b/src/app/features/financial-dashboard/components/general-table/filtering-form/filtering-form.component.scss
@@ -8,9 +8,29 @@
   box-shadow: 2px 2px 15px rgb(128 142 184 / 30%);
   border-radius: 10px;
 
-  @media screen and (max-width: 500px) {
+  &__search {
+    & button:first-child {
+      margin-right: 15px;
+    }
+  }
+
+  @media screen and (max-width: 767.98px) {
     &__issuance-date, &__actual-date {
       flex-direction: column;
+    }
+  }
+
+  @media screen and (max-width: 499.98px){
+    &__search {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+
+      & button:first-child {
+        margin-right: 0;
+      }
     }
   }
 }
@@ -18,7 +38,7 @@
 .issuance-date__from, .actual-date__from {
   margin-right: 1rem;
 
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 767.98px) {
     margin-bottom: 1rem;
     margin-right: 0;
   }
