--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<div> {{title}} </div>
+<div id="app">
+  <div class="wrapper">
+    <app-navbar></app-navbar>
+
+    <main class="page">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+</div>
